--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -96,6 +96,23 @@ img.logo
 		p
 			color: $DarkGrey
 			text-align: justify
+
+//FORM content
+fieldset
+	border: 2px solid $Sky
+	padding: 10px
+	border-radius: 10px
+	legend
+		color: $Blue
+		font-size: 16px
+		padding: 0 10px 0 10px
+		width: auto
+.input-group-text
+	img
+		height: 15px
+		width: 10px
+
+
 .page-footer
 	height: 50px
 	background-color: $DarkGrey
