--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -98,6 +98,24 @@ img.logo
 			text-align: justify
 
 //FORM content
+form
+	select,input[placeholder]
+		font-size: 12px
+	input
+		height: calc(2.25rem + 2px)
+	.custom-select
+		padding: .375rem 0.75rem .375rem .75rem
+		-webkit-background-size: 6px 6px
+		background-size: 6px 6px
+	div.input-group-prepend
+		i
+			font-size: 12px
+	input[type=submit]
+		text-align: center
+		padding: 0 20px
+	.sbmtwrapper
+		text-align: center
+
 fieldset
 	border: 2px solid $Sky
 	padding: 10px
