--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -36,7 +36,6 @@ body
 		vertical-align: middle
 		display: block
 		.nav
-			&-item
 			a
 				font-size: 18px
 				//margin: 16px 16px 0 0
@@ -146,8 +145,9 @@ fieldset
 
 
 //Load Libs SASS
-
 @import nselect.sass
+@import mCustomScrollbar.sass
+
 
 
 
