editing Lib model for MVO view - table style

--- a/app/sass/nselect.sass
+++ b/app/sass/nselect.sass
@@ -104,8 +104,8 @@
       font-size: 14px
       background: #afceff
       border-radius: 2px
-      padding: 7px 24px 7px 11px
-      height: 31px
+      padding: 12px 24px 7px 11px
+      height: 100%
       color: #000
       &:after
         right: 10px
