--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -108,7 +108,7 @@ form
 		background-size: 6px 6px
 	div.input-group-prepend
 		i
-			font-size: 12px
+			font-size: 10px
 	input[type=submit]
 		text-align: center
 		padding: 0 20px
@@ -145,8 +145,11 @@ fieldset
 
 
 //Load Libs SASS
-@import nselect.sass
 @import mCustomScrollbar.sass
+@import jquery.nselect.sass
+
+
+
 
 
 
