--- a/app/css/main.css
+++ b/app/css/main.css
@@ -107,28 +107,31 @@ form input {
 form .custom-select {
   padding: .375rem 0.75rem .375rem .75rem;
   -webkit-background-size: 6px 6px;
-  background-size: 6px 6px; }
+  background-size: 6px 6px;
+  width: 200px; }
 
 form div.input-group-prepend i {
   font-size: 10px; }
 
 form input[type=submit] {
-  text-align: center;
+  text-align: left;
   padding: 0 20px; }
 
 form .sbmtwrapper {
+  text-align: left;
+  margin: 30px 0 10px; }
+
+form .nselect.nsOrange {
+  width: 80%;
+  background-color: #D6EBFF;
   text-align: center; }
 
-fieldset {
-  border: 2px solid #D6EBFF;
-  padding: 10px;
-  -webkit-border-radius: 10px;
-          border-radius: 10px; }
-  fieldset legend {
-    color: #88C5FF;
-    font-size: 16px;
-    padding: 0 10px 0 10px;
-    width: auto; }
+form .nselect.nsOrange .nselect__head {
+  font-size: 15px;
+  font-weight: 700; }
+
+form .nselect.nsOrange._checked {
+  background-color: #f2a621; }
 
 .input-group-text img {
   height: 15px;
